force-app/main/default/objects/GTM_Readout_Approval_Log__c/GTM_Readout_Approval_Log__c.object-meta.xml
<CustomObject>
    <label>Readout Approval Log</label>
    <nameField>
        <displayFormat>RAL-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readout Approval Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>