force-app/main/default/objects/GTM_Readout_Approval_Log__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <description>The rep who self-approved the readout. Always the readout's own owner -- GtmReadoutController.selfApproveReadout refuses the action for anyone else -- stamped from the running user at insert time.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Readout Self-Approvals</relationshipLabel>
    <relationshipName>Readout_Self_Approvals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>