force-app/main/default/objects/GTM_Readout_Approval_Log__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved Date</label>
    <description>When the self-approval happened, stamped from System.now() by GtmReadoutController.selfApproveReadout at insert time.</description>
    <type>DateTime</type>
</CustomField>